<resources>
    <string name="app_name">AmbientApp</string>

    <string name="sub_freq1">Cada 60 minutos</string>
    <string name="sub_freq2">Cada 30 minutos</string>
    <string name="sub_freq3">Cada 15 minutos</string>
    <string name="sub_freq4">Cada 5 minutos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="frame_temperatura">Temperatura</string>
    <string name="frame_humedad">Humedad</string>
    <string name="frame_co">CO</string>
    <string name="frame_co2">CO2</string>
    <string name="frame_metano">Metano</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="frame_sensor">Sensor</string>
    <string name="frame_latitud">Latitud</string>
    <string name="frame_longitud">Longitud</string>
    <string name="frame_localizacion">Este es la opcion de localizacion</string>
    <string name="frame_estadistica">Este es la opcion de estadística</string>
    <string name="bienvenida">Bienvenido a AmbientApp</string>
    <string name="list_sensors">Lista Sensores</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="error_invalid_user">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_login">Usuario o contraseña incorrectos</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="Sensores">
        <item>SPA001</item>
        <item>SPA002</item>
        <item>SPA003</item>
        <item>SPA004</item>
        <item>SPA005</item>
        <item>SPA006</item>
        <item>SPA007</item>
        <item>SPA008</item>
        <item>SPA009</item>
    </string-array>
    <string name="title_activity_show_sensor">ShowSensor</string>
    <string name="title_activity_list_sensors">ListSensors</string>
    <string name="title_activity_main">AmbientApp</string>
</resources>
