<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShowSensorActivity">
    <item
        android:id="@+id/action_freq"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">
        <menu >
            <group android:id="@+id/subgroup" android:checkableBehavior="single">
                <item android:id="@+id/submenu_freq1" android:title="@string/sub_freq1" />
                <item android:id="@+id/submenu_freq2" android:title="@string/sub_freq2" />
                <item android:id="@+id/submenu_freq3" android:title="@string/sub_freq3" />
                <item android:id="@+id/submenu_freq4" android:title="@string/sub_freq4" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
